--- a/fastlane/metadata/es-MX/release_notes.txt
+++ b/fastlane/metadata/es-MX/release_notes.txt
@@ -1,1 +1,1 @@
-• Actualizamos el panel de control que aparece durante las llamadas de voz y videollamadas. Si quieres guardar tus mejores chistes y comentarios más interesantes hasta que tu persona favorita esté escuchando, ahora puedes deslizar hacia arriba en el panel de control para ver la lista de personas que están en la llamada, ver quién ha levantado la mano y realizar otras acciones rápidas.
+• Actualizamos el panel de control que aparece durante las llamadas de voz y videollamadas. Si quieres guardar tus mejores chistes y opiniones más interesantes hasta que tu persona favorita esté escuchando, ahora puedes deslizar el dedo hacia arriba en el panel de control para ver la lista de personas que están en la llamada, ver quién ha levantado la mano y realizar otras acciones rápidas.
